# RoboticsProject

src/: rviz_config_tp.rviz
src/laser/: CMakeLists.txt  package.xml
src/laser/launch/: landmark_detector.launch
src/laser/src/: landmark_detector.cpp  landmark_detector.h
src/lazo_abierto/include/lazo_abierto/: FeedForwardController.h  TrajectoryFollower.h
src/lazo_abierto/launch/: lazo_abierto.launch
src/lazo_abierto/src/: FeedForwardController.cpp  TrajectoryFollower.cpp  trajectory_generator_node.cpp
src/lazo_cerrado/: CMakeLists.txt
src/lazo_cerrado/launch/: lazo_cerrado.launch
src/lazo_cerrado/src/: KinematicPositionController.cpp  KinematicPositionController.h  logger_node.cpp
src/odom/: CMakeLists.txt  package.xml
src/odom/launch/: odom.launch
src/odom/src/: logger_node_odom.cpp  robot_odometry.cpp  robot_odometry.h  robot_odometry_node.cpp
src/robmovil_ekf/: CMakeLists.txt  package.xml
src/robmovil_ekf/launch/: robmovil_ekf.launch  robmovil_ekf_lazo_cerrado.launch
src/robmovil_ekf/src/: localizer.cpp  localizer.h  localizer_ekf.cpp  localizer_ekf.h  logger_node_ekf.cpp
